--- a/public/department.html
+++ b/public/department.html
@@ -62,7 +62,7 @@ function getEmbedCode(link) {
       ? `<iframe src="https://drive.google.com/file/d/${fileId}/preview" allowfullscreen onerror="
             alert('تعذر تشغيل فيديو Google Drive. سيتم فتحه في نافذة جديدة.');
             window.open('${link}', '_blank', 'width=800,height=600');
-            this.outerHTML = '<p class='text-danger'>تعذر تشغيل الفيديو. <a href='${link}' target='_blank'>اضغط هنا لفتحه في نافذة جديدة</a></p>';
+            this.outerHTML = '<p class="text-danger">تعذر تشغيل الفيديو. <a href='${link}' target='_blank'>اضغط هنا لفتحه في نافذة جديدة</a></p>';
           "></iframe>`
       : '<div class="alert alert-danger">رابط Google Drive غير صالح أو خاص. تأكد من أنه مشترك علنًا.</div>';
   } else {
@@ -88,7 +88,11 @@ const pageTitle = document.getElementById('page-title');
 async function fetchVideos() {
   try {
     const res = await fetch('/api/videos');
-    allVideos = await res.json();
+    const videosFromServer = await res.json();
+    allVideos = videosFromServer.map(video => ({
+      ...video,
+      link: video.url  // تعديل لاستخدام video.url بدل video.link
+    }));
     renderFilteredVideos();
   } catch (err) {
     container.innerHTML = `<div class="alert alert-danger text-center">فشل تحميل الفيديوهات من الخادم</div>`;
