--- a/public/edit.html
+++ b/public/edit.html
@@ -41,6 +41,32 @@
       margin-top: 10px;
       display: block;
     }
+    .desc-tooltip {
+      cursor: pointer;
+      text-decoration: underline;
+    }
+    .modal-desc {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      z-index: 9999;
+      max-width: 500px;
+      text-align: center;
+    }
+    .modal-backdrop-custom {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(0,0,0,0.5);
+      z-index: 9998;
+    }
   </style>
 </head>
 <body>
@@ -70,7 +96,7 @@
       <div class="alert alert-info text-center">الرجاء اختيار قسم لعرض الفيديوهات.</div>
     </div>
 
-    <!-- Modal -->
+    <!-- Modal تعديل -->
     <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -106,6 +132,9 @@
       </div>
     </div>
   </div>
+
+<div id="descModal" style="display:none"></div>
+<div id="descBackdrop" class="modal-backdrop-custom" style="display:none" onclick="closeDescModal()"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
@@ -162,15 +191,16 @@ async function renderFilteredVideos() {
   }
 
   filtered.forEach(video => {
+    const shortDesc = video.description.split(" ").slice(0, 3).join(" ") + '...';
     container.innerHTML += `
       <div class="video-card">
         <div class="form-check mb-2">
           <input type="checkbox" class="form-check-input" data-id="${video._id}">
         </div>
         <h5>${video.title}</h5>
-        <p>${video.description}</p>
-        <video src="${video.link}" controls></video>
-        <button class="btn btn-sm btn-info mt-2" onclick="openInPopup('${video.link}')">انقر لعرض الفيديو</button>
+        <p class="desc-tooltip" onclick="showDescModal(\`${video.description}\`)" title="اضغط لعرض الوصف كاملًا">${shortDesc}</p>
+        <video src="${video.url}" controls></video>
+        <button class="btn btn-sm btn-info mt-2" onclick="openInPopup('${video.url}')">انقر لعرض الفيديو</button>
         <div class="action-buttons">
           <button class="btn btn-warning btn-sm" onclick="editVideo('${video._id}')">تعديل</button>
           <button class="btn btn-danger btn-sm" onclick="deleteVideo('${video._id}')">حذف</button>
@@ -179,12 +209,28 @@ async function renderFilteredVideos() {
   });
 }
 
+function showDescModal(desc) {
+  const modal = document.getElementById('descModal');
+  const backdrop = document.getElementById('descBackdrop');
+  modal.innerHTML = `<div class='modal-desc'>
+    <p>${desc}</p>
+    <button class='btn btn-secondary mt-3' onclick='closeDescModal()'>إغلاق</button>
+  </div>`;
+  modal.style.display = 'block';
+  backdrop.style.display = 'block';
+}
+
+function closeDescModal() {
+  document.getElementById('descModal').style.display = 'none';
+  document.getElementById('descBackdrop').style.display = 'none';
+}
+
 function editVideo(id) {
   const video = videos.find(v => v._id === id);
   document.getElementById('editId').value = video._id;
   document.getElementById('editTitle').value = video.title;
   document.getElementById('editDescription').value = video.description;
-  document.getElementById('editLink').value = video.link;
+  document.getElementById('editLink').value = video.url;
   document.getElementById('editDepartment').value = video.department;
   const modal = new bootstrap.Modal(document.getElementById('editModal'));
   modal.show();
@@ -195,7 +241,7 @@ async function saveEdit() {
   const updatedVideo = {
     title: document.getElementById('editTitle').value,
     description: document.getElementById('editDescription').value,
-    link: document.getElementById('editLink').value,
+    url: document.getElementById('editLink').value,
     department: document.getElementById('editDepartment').value,
   };
   await fetch(`${API_BASE}/api/videos/${id}`, {
@@ -228,6 +274,7 @@ async function confirmDeleteSelectedVideos() {
 }
 
 function openInPopup(link) {
+  if (!link || link === 'undefined') return alert('الرابط غير صالح');
   window.open(link, '_blank', 'width=800,height=600');
 }
 
