--- a/public/edit.html
+++ b/public/edit.html
@@ -41,7 +41,7 @@
       margin-top: 10px;
       display: block;
     }
-    .desc-tooltip, .title-two-lines {
+    .desc-tooltip {
       cursor: pointer;
       text-decoration: underline;
     }
@@ -74,6 +74,7 @@
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
+      cursor: pointer;
     }
   </style>
 </head>
