--- a/public/edit.html
+++ b/public/edit.html
@@ -34,6 +34,13 @@
       display: flex;
       gap: 10px;
     }
+    .form-select, .form-control {
+      margin-bottom: 15px;
+    }
+    .popout-btn {
+      margin-top: 10px;
+      display: block;
+    }
     .desc-tooltip, .title-tooltip {
       cursor: pointer;
       text-decoration: underline;
@@ -94,6 +101,29 @@
   </div>
   <div id="descBackdrop" class="modal-backdrop-custom" style="display:none" onclick="hideModal()"></div>
 
+  <!-- Modal for Editing -->
+  <div class="modal fade" id="editModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">تعديل الفيديو</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <input type="hidden" id="editId">
+          <input type="text" class="form-control mb-2" id="editTitle" placeholder="العنوان">
+          <textarea class="form-control mb-2" id="editDesc" placeholder="الوصف"></textarea>
+          <input type="text" class="form-control mb-2" id="editUrl" placeholder="رابط الفيديو">
+          <input type="text" class="form-control mb-2" id="editDept" placeholder="القسم">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إغلاق</button>
+          <button type="button" class="btn btn-primary" onclick="saveEditModal()">حفظ</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 <script>
 const API_BASE = 'https://video-dashboard-backend.onrender.com';
 let videos = [];
@@ -148,7 +178,7 @@ function renderFilteredVideos() {
         <video src="${video.url}" controls onerror="this.outerHTML='<p>تعذر تحميل الفيديو</p>'"></video>
         <button class="btn btn-sm btn-info mt-2" onclick="openInPopup('${video.url}')">انقر لعرض الفيديو</button>
         <div class="action-buttons">
-          <button class="btn btn-warning btn-sm" onclick="editVideo('${video._id}')">تعديل</button>
+          <button class="btn btn-warning btn-sm" onclick="openEditModal('${video._id}')">تعديل</button>
           <button class="btn btn-danger btn-sm" onclick="deleteVideo('${video._id}')">حذف</button>
         </div>
       </div>`;
@@ -190,31 +220,35 @@ async function deleteVideo(id) {
   await fetchVideos();
 }
 
-async function editVideo(id) {
+function openEditModal(id) {
   const video = videos.find(v => v._id === id);
-  const newTitle = prompt("عنوان جديد:", video.title);
-  const newDescription = prompt("وصف جديد:", video.description);
-  const newUrl = prompt("رابط جديد:", video.url);
-  const newDept = prompt("القسم الجديد:", video.department);
-  if (!newTitle || !newUrl || !newDept) return alert("جميع الحقول مطلوبة.");
+  document.getElementById('editId').value = id;
+  document.getElementById('editTitle').value = video.title;
+  document.getElementById('editDesc').value = video.description;
+  document.getElementById('editUrl').value = video.url;
+  document.getElementById('editDept').value = video.department;
+  new bootstrap.Modal(document.getElementById('editModal')).show();
+}
 
+async function saveEditModal() {
+  const id = document.getElementById('editId').value;
   const updated = {
-    title: newTitle,
-    description: newDescription,
-    url: newUrl,
-    department: newDept
+    title: document.getElementById('editTitle').value,
+    description: document.getElementById('editDesc').value,
+    url: document.getElementById('editUrl').value,
+    department: document.getElementById('editDept').value
   };
-
   await fetch(`${API_BASE}/api/videos/${id}`, {
     method: 'PUT',
     headers: { 'Content-Type': 'application/json' },
     body: JSON.stringify(updated)
   });
-
+  bootstrap.Modal.getInstance(document.getElementById('editModal')).hide();
   await fetchVideos();
 }
 
 fetchVideos();
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
