--- a/public/edit.html
+++ b/public/edit.html
@@ -37,10 +37,6 @@
     .form-select, .form-control {
       margin-bottom: 15px;
     }
-    .popout-btn {
-      margin-top: 10px;
-      display: block;
-    }
     .desc-tooltip, .title-tooltip {
       cursor: pointer;
       text-decoration: underline;
@@ -118,7 +114,7 @@
           <label class="form-label">رابط الفيديو</label>
           <input type="text" class="form-control mb-2" id="editUrl" placeholder="رابط الفيديو">
           <label class="form-label">القسم</label>
-          <input type="text" class="form-control mb-2" id="editDept" placeholder="القسم">
+          <select class="form-select" id="editDept"></select>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إغلاق</button>
@@ -128,130 +124,7 @@
     </div>
   </div>
 
-<script>
-<script>
-const API_BASE = 'https://video-dashboard-backend.onrender.com';
-let videos = [];
-const container = document.getElementById('videoContainer');
-const deptSelect = document.getElementById('deptSelect');
-
-async function fetchVideos() {
-  const res = await fetch(`${API_BASE}/api/videos`);
-  videos = await res.json();
-  populateDepartments();
-  renderFilteredVideos();
-}
-
-function populateDepartments() {
-  const deptMap = {};
-  videos.forEach(v => {
-    deptMap[v.department] = (deptMap[v.department] || 0) + 1;
-  });
-  deptSelect.innerHTML = '<option value="">-- اختر القسم --</option>';
-  Object.entries(deptMap).forEach(([dept, count]) => {
-    deptSelect.add(new Option(`${dept} (${count})`, dept));
-  });
-}
-
-function renderFilteredVideos() {
-  const dept = deptSelect.value;
-  const searchTerm = document.getElementById('searchInput').value.toLowerCase();
-
-  const filtered = videos.filter(v =>
-    v.department === dept &&
-    (v.title.toLowerCase().includes(searchTerm) ||
-     v.description.toLowerCase().includes(searchTerm))
-  );
-
-  container.innerHTML = '';
-  if (filtered.length === 0) {
-    container.innerHTML = '<div class="alert alert-info text-center">لا توجد فيديوهات مطابقة.</div>';
-    return;
-  }
-
-  filtered.forEach(video => {
-    const shortTitle = video.title.split(" ").slice(0, 4).join(" ") + '...';
-    const shortDesc = video.description?.split(" ").slice(0, 3).join(" ") + '...';
-
-    container.innerHTML += `
-      <div class="video-card">
-        <div class="form-check mb-2">
-          <input type="checkbox" class="form-check-input" data-id="${video._id}">
-        </div>
-        <h5 class="title-tooltip" onclick="showModal(\`${video.title}\`)">${shortTitle}</h5>
-        <p class="desc-tooltip" onclick="showModal(\`${video.description}\`)">${shortDesc}</p>
-        <video src="${video.url}" controls onerror="this.outerHTML='<p>تعذر تحميل الفيديو</p>'"></video>
-        <button class="btn btn-sm btn-info mt-2" onclick="openInPopup('${video.url}')">انقر لعرض الفيديو</button>
-        <div class="action-buttons">
-          <button class="btn btn-warning btn-sm" onclick="editVideo('${video._id}')">تعديل</button>
-          <button class="btn btn-danger btn-sm" onclick="deleteVideo('${video._id}')">حذف</button>
-        </div>
-      </div>`;
-  });
-}
-
-function showModal(text) {
-  document.getElementById('fullText').textContent = text;
-  document.getElementById('descModal').style.display = 'block';
-  document.getElementById('descBackdrop').style.display = 'block';
-}
-function hideModal() {
-  document.getElementById('descModal').style.display = 'none';
-  document.getElementById('descBackdrop').style.display = 'none';
-}
-
-function openInPopup(link) {
-  if (!link || link === 'undefined') {
-    alert('الرابط غير صالح');
-    return;
-  }
-  window.open(link, '_blank', 'width=800,height=600');
-}
-
-function toggleSelectAll(source) {
-  document.querySelectorAll('#videoContainer input[type="checkbox"]').forEach(cb => cb.checked = source.checked);
-}
-
-async function confirmDeleteSelectedVideos() {
-  if (!confirm('هل أنت متأكد من حذف جميع الفيديوهات المحددة؟')) return;
-  const selected = [...document.querySelectorAll('#videoContainer input[type="checkbox"]:checked')].map(cb => cb.getAttribute('data-id'));
-  await Promise.all(selected.map(id => fetch(`${API_BASE}/api/videos/${id}`, { method: 'DELETE' })));
-  await fetchVideos();
-}
-
-async function deleteVideo(id) {
-  if (!confirm('هل تريد حذف هذا الفيديو؟')) return;
-  await fetch(`${API_BASE}/api/videos/${id}`, { method: 'DELETE' });
-  await fetchVideos();
-}
-
-async function editVideo(id) {
-  const video = videos.find(v => v._id === id);
-  const newTitle = prompt("عنوان جديد:", video.title);
-  const newDescription = prompt("وصف جديد:", video.description);
-  const newUrl = prompt("رابط جديد:", video.url);
-  const newDept = prompt("القسم الجديد:", video.department);
-  if (!newTitle || !newUrl || !newDept) return alert("جميع الحقول مطلوبة.");
-
-  const updated = {
-    title: newTitle,
-    description: newDescription,
-    url: newUrl,
-    department: newDept
-  };
-
-  await fetch(`${API_BASE}/api/videos/${id}`, {
-    method: 'PUT',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify(updated)
-  });
-
-  await fetchVideos();
-}
-
-fetchVideos();
-</script>
-</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="video-edit.js"></script>
 </body>
 </html>
