--- a/public/edit.html
+++ b/public/edit.html
@@ -114,7 +114,9 @@
           <label class="form-label">رابط الفيديو</label>
           <input type="text" class="form-control mb-2" id="editUrl" placeholder="رابط الفيديو">
           <label class="form-label">القسم</label>
-          <select class="form-select" id="editDept"></select>
+          <select class="form-select" id="editDept">
+            <option value="">-- اختر القسم --</option>
+          </select>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إغلاق</button>
@@ -126,5 +128,33 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="video-edit.js"></script>
+<script>
+  // Populate department list into select boxes
+  function populateDepartmentsSelect(departments) {
+    const deptSelect = document.getElementById('deptSelect');
+    const editDept = document.getElementById('editDept');
+    departments.forEach(dept => {
+      const opt1 = new Option(dept, dept);
+      const opt2 = new Option(dept, dept);
+      deptSelect.add(opt1);
+      editDept.add(opt2);
+    });
+  }
+
+  // Call this with real data
+  const predefinedDepartments = [
+    "قسم اللغة العربية",
+    "قسم اللغة الانجليزية",
+    "قسم الترجمة",
+    "قسم علم النفس",
+    "قسم المساقات الخدمية",
+    "نظام ملف المادة",
+    "نظام المخرجات التعليمية (الواصفات)",
+    "نظام السيرة الذاتية",
+    "صفحة الموظف",
+    "البوابة الالكترونية"
+  ];
+  populateDepartmentsSelect(predefinedDepartments);
+</script>
 </body>
 </html>
