--- a/public/edit.html
+++ b/public/edit.html
@@ -34,9 +34,6 @@
       display: flex;
       gap: 10px;
     }
-    .form-select, .form-control {
-      margin-bottom: 15px;
-    }
     .desc-tooltip, .title-tooltip {
       cursor: pointer;
       text-decoration: underline;
@@ -97,64 +94,127 @@
   </div>
   <div id="descBackdrop" class="modal-backdrop-custom" style="display:none" onclick="hideModal()"></div>
 
-  <!-- Modal for Editing -->
-  <div class="modal fade" id="editModal" tabindex="-1">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">تعديل الفيديو</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-        </div>
-        <div class="modal-body">
-          <input type="hidden" id="editId">
-          <label class="form-label">العنوان</label>
-          <input type="text" class="form-control mb-2" id="editTitle" placeholder="العنوان">
-          <label class="form-label">الوصف</label>
-          <textarea class="form-control mb-2" id="editDesc" placeholder="الوصف"></textarea>
-          <label class="form-label">رابط الفيديو</label>
-          <input type="text" class="form-control mb-2" id="editUrl" placeholder="رابط الفيديو">
-          <label class="form-label">القسم</label>
-          <select class="form-select" id="editDept">
-            <option value="">-- اختر القسم --</option>
-          </select>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إغلاق</button>
-          <button type="button" class="btn btn-primary" onclick="saveEditModal()">حفظ</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="video-edit.js"></script>
 <script>
-  // Populate department list into select boxes
-  function populateDepartmentsSelect(departments) {
-    const deptSelect = document.getElementById('deptSelect');
-    const editDept = document.getElementById('editDept');
-    departments.forEach(dept => {
-      const opt1 = new Option(dept, dept);
-      const opt2 = new Option(dept, dept);
-      deptSelect.add(opt1);
-      editDept.add(opt2);
-    });
+const API_BASE = 'https://video-dashboard-backend.onrender.com';
+let videos = [];
+const container = document.getElementById('videoContainer');
+const deptSelect = document.getElementById('deptSelect');
+
+async function fetchVideos() {
+  const res = await fetch(`${API_BASE}/api/videos`);
+  videos = await res.json();
+  populateDepartments();
+  renderFilteredVideos();
+}
+
+function populateDepartments() {
+  const deptMap = {};
+  videos.forEach(v => {
+    deptMap[v.department] = (deptMap[v.department] || 0) + 1;
+  });
+  deptSelect.innerHTML = '<option value="">-- اختر القسم --</option>';
+  Object.entries(deptMap).forEach(([dept, count]) => {
+    deptSelect.add(new Option(`${dept} (${count})`, dept));
+  });
+}
+
+function renderFilteredVideos() {
+  const dept = deptSelect.value;
+  const searchTerm = document.getElementById('searchInput').value.toLowerCase();
+
+  const filtered = videos.filter(v =>
+    v.department === dept &&
+    (v.title.toLowerCase().includes(searchTerm) ||
+     v.description.toLowerCase().includes(searchTerm))
+  );
+
+  container.innerHTML = '';
+  if (filtered.length === 0) {
+    container.innerHTML = '<div class="alert alert-info text-center">لا توجد فيديوهات مطابقة.</div>';
+    return;
   }
 
-  // Call this with real data
-  const predefinedDepartments = [
-    "قسم اللغة العربية",
-    "قسم اللغة الانجليزية",
-    "قسم الترجمة",
-    "قسم علم النفس",
-    "قسم المساقات الخدمية",
-    "نظام ملف المادة",
-    "نظام المخرجات التعليمية (الواصفات)",
-    "نظام السيرة الذاتية",
-    "صفحة الموظف",
-    "البوابة الالكترونية"
-  ];
-  populateDepartmentsSelect(predefinedDepartments);
+  filtered.forEach(video => {
+    const shortTitle = video.title.split(" ").slice(0, 4).join(" ") + '...';
+    const shortDesc = video.description?.split(" ").slice(0, 3).join(" ") + '...';
+
+    container.innerHTML += `
+      <div class="video-card">
+        <div class="form-check mb-2">
+          <input type="checkbox" class="form-check-input" data-id="${video._id}">
+        </div>
+        <h5 class="title-tooltip" onclick="showModal(\`${video.title}\`)">${shortTitle}</h5>
+        <p class="desc-tooltip" onclick="showModal(\`${video.description}\`)">${shortDesc}</p>
+        <video src="${video.url}" controls onerror="this.outerHTML='<p>تعذر تحميل الفيديو</p>'"></video>
+        <button class="btn btn-sm btn-info mt-2" onclick="openInPopup('${video.url}')">انقر لعرض الفيديو</button>
+        <div class="action-buttons">
+          <button class="btn btn-warning btn-sm" onclick="editVideo('${video._id}')">تعديل</button>
+          <button class="btn btn-danger btn-sm" onclick="deleteVideo('${video._id}')">حذف</button>
+        </div>
+      </div>`;
+  });
+}
+
+function showModal(text) {
+  document.getElementById('fullText').textContent = text;
+  document.getElementById('descModal').style.display = 'block';
+  document.getElementById('descBackdrop').style.display = 'block';
+}
+function hideModal() {
+  document.getElementById('descModal').style.display = 'none';
+  document.getElementById('descBackdrop').style.display = 'none';
+}
+
+function openInPopup(link) {
+  if (!link || link === 'undefined') {
+    alert('الرابط غير صالح');
+    return;
+  }
+  window.open(link, '_blank', 'width=800,height=600');
+}
+
+function toggleSelectAll(source) {
+  document.querySelectorAll('#videoContainer input[type="checkbox"]').forEach(cb => cb.checked = source.checked);
+}
+
+async function confirmDeleteSelectedVideos() {
+  if (!confirm('هل أنت متأكد من حذف جميع الفيديوهات المحددة؟')) return;
+  const selected = [...document.querySelectorAll('#videoContainer input[type="checkbox"]:checked')].map(cb => cb.getAttribute('data-id'));
+  await Promise.all(selected.map(id => fetch(`${API_BASE}/api/videos/${id}`, { method: 'DELETE' })));
+  await fetchVideos();
+}
+
+async function deleteVideo(id) {
+  if (!confirm('هل تريد حذف هذا الفيديو؟')) return;
+  await fetch(`${API_BASE}/api/videos/${id}`, { method: 'DELETE' });
+  await fetchVideos();
+}
+
+async function editVideo(id) {
+  const video = videos.find(v => v._id === id);
+  const newTitle = prompt("عنوان جديد:", video.title);
+  const newDescription = prompt("وصف جديد:", video.description);
+  const newUrl = prompt("رابط جديد:", video.url);
+  const newDept = prompt("القسم الجديد:", video.department);
+  if (!newTitle || !newUrl || !newDept) return alert("جميع الحقول مطلوبة.");
+
+  const updated = {
+    title: newTitle,
+    description: newDescription,
+    url: newUrl,
+    department: newDept
+  };
+
+  await fetch(`${API_BASE}/api/videos/${id}`, {
+    method: 'PUT',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify(updated)
+  });
+
+  await fetchVideos();
+}
+
+fetchVideos();
 </script>
 </body>
 </html>
