--- a/public/edit.html
+++ b/public/edit.html
@@ -22,6 +22,15 @@
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       position: relative;
     }
+    .video-card h5 {
+      height: 3em;
+      line-height: 1.5em;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+    }
     iframe, video {
       width: 100%;
       height: 200px;
