--- a/public/edit.html
+++ b/public/edit.html
@@ -101,11 +101,40 @@
 </div>
 <div id="descBackdrop" class="modal-backdrop-custom" style="display:none" onclick="hideModal()"></div>
 
+<!-- ✅ تم إضافة مودال التعديل مجددًا لأنه كان مفقوداً -->
+<div class="modal fade" id="editModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">تعديل الفيديو</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <input type="hidden" id="editId">
+        <label class="form-label">العنوان</label>
+        <input type="text" class="form-control mb-2" id="editTitle">
+        <label class="form-label">الوصف</label>
+        <textarea class="form-control mb-2" id="editDesc"></textarea>
+        <label class="form-label">رابط الفيديو</label>
+        <input type="text" class="form-control mb-2" id="editUrl">
+        <label class="form-label">القسم</label>
+        <select class="form-select" id="editDept"></select>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إغلاق</button>
+        <button type="button" class="btn btn-primary" onclick="saveEditModal()">حفظ</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
 const API_BASE = 'https://video-dashboard-backend.onrender.com';
 let videos = [];
 const container = document.getElementById('videoContainer');
 const deptSelect = document.getElementById('deptSelect');
+const editModal = new bootstrap.Modal(document.getElementById('editModal'));
 
 function showModal(text) {
   document.getElementById('fullText').textContent = text;
@@ -142,6 +171,33 @@ async function deleteVideo(id) {
   await renderFilteredVideos();
 }
 
+function editVideo(id) {
+  const video = videos.find(v => v._id === id);
+  document.getElementById('editId').value = video._id;
+  document.getElementById('editTitle').value = video.title;
+  document.getElementById('editDesc').value = video.description;
+  document.getElementById('editUrl').value = video.url;
+  document.getElementById('editDept').value = video.department;
+  editModal.show();
+}
+
+async function saveEditModal() {
+  const id = document.getElementById('editId').value;
+  const updated = {
+    title: document.getElementById('editTitle').value,
+    description: document.getElementById('editDesc').value,
+    url: document.getElementById('editUrl').value,
+    department: document.getElementById('editDept').value
+  };
+  await fetch(`${API_BASE}/api/videos/${id}`, {
+    method: 'PUT',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify(updated)
+  });
+  editModal.hide();
+  await renderFilteredVideos();
+}
+
 async function fetchVideos() {
   const res = await fetch(`${API_BASE}/api/videos`);
   videos = await res.json();
@@ -154,8 +210,11 @@ function populateDepartments() {
     deptMap[v.department] = (deptMap[v.department] || 0) + 1;
   });
   deptSelect.innerHTML = '<option value="">-- اختر القسم --</option>';
+  const editDept = document.getElementById('editDept');
+  editDept.innerHTML = '<option value="">-- اختر القسم --</option>';
   Object.entries(deptMap).forEach(([dept, count]) => {
     deptSelect.add(new Option(`${dept} (${count})`, dept));
+    editDept.add(new Option(dept, dept));
   });
 }
 
